# ff14

./: .gitignore  main.py  middleware.py  pyproject.toml  text_finder.py
backend/: helpers.py
backend/domain/item/: helpers.py
backend/external_api/: processors.py  requester.py
backend/middleware/: middleware.py  type_def.py
backend/repository/: repository.py
commons/: helpers.py
commons/domain/item/: helpers.py
commons/external_api/: processors.py  requester.py  type_def.py
commons/middleware/: middleware.py  type_def.py
commons/repository/: repository.py
commons/text_recognition/: ocr_manager.py
external_api/: requester.py
